objects/Lead.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACTE</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>Concur</fullName>
                </value>
                <value>
                    <fullName>Conference - Concur Fusion</fullName>
                </value>
                <value>
                    <fullName>Conference - GBTA</fullName>
                </value>
                <value>
                    <fullName>Conference - ISM</fullName>
                </value>
                <value>
                    <fullName>Crains</fullName>
                </value>
                <value>
                    <fullName>CTD List</fullName>
                </value>
                <value>
                    <fullName>CTS</fullName>
                </value>
                <value>
                    <fullName>Data.com</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Directravel</fullName>
                </value>
                <value>
                    <fullName>Diversity Event</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>GBTA</fullName>
                </value>
                <value>
                    <fullName>GBTA (Local Chapter)</fullName>
                </value>
                <value>
                    <fullName>Hoovers</fullName>
                </value>
                <value>
                    <fullName>HRG</fullName>
                </value>
                <value>
                    <fullName>InterplX</fullName>
                </value>
                <value>
                    <fullName>Mailing List</fullName>
                </value>
                <value>
                    <fullName>Mobilo</fullName>
                </value>
                <value>
                    <fullName>NBTA (WI or MN)</fullName>
                </value>
                <value>
                    <fullName>Networking Event</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>One Source</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>D_U_N_S__c</fullName>
        <label>D-U-N-S Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <description>No specific contract date.</description>
        <label>Contract Expiration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account will not share information.</fullName>
                </value>
                <value>
                    <fullName>No Contract in place</fullName>
                </value>
                <value>
                    <fullName>Month to Month</fullName>
                </value>
                <value>
                    <fullName>Q1 2007</fullName>
                </value>
                <value>
                    <fullName>Q2 2007</fullName>
                </value>
                <value>
                    <fullName>Q3 2007</fullName>
                </value>
                <value>
                    <fullName>Q4 2007</fullName>
                </value>
                <value>
                    <fullName>Q1 2008</fullName>
                </value>
                <value>
                    <fullName>Q2 2008</fullName>
                </value>
                <value>
                    <fullName>Q3 2008</fullName>
                </value>
                <value>
                    <fullName>Q4 2008</fullName>
                </value>
                <value>
                    <fullName>Q1 2009</fullName>
                </value>
                <value>
                    <fullName>Q2 2009</fullName>
                </value>
                <value>
                    <fullName>Q3 2009</fullName>
                </value>
                <value>
                    <fullName>Q4 2009</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <label>Marketing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Send Marketing literature.</fullName>
                </value>
                <value>
                    <fullName>Do not send marketing literature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nick_Name__c</fullName>
        <description>Contact Nick Name</description>
        <label>Nick Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Board of Directors</fullName>
                </value>
                <value>
                    <fullName>Diversity</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Meetings</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Travel Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDPR_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box when this specific contacts gives &quot;consent&quot; to receive email/messages from Direct Travel.</description>
        <inlineHelpText>Check this box when this specific contacts gives &quot;consent&quot; to receive email/messages from Direct Travel.</inlineHelpText>
        <label>GDPR Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OMNIA_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this Lead&apos;s company a member of OMNIA Partners (formerly Corporate United) affiliation?</description>
        <label>OMNIA Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>Strategic Named Accounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telemarketer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lead to be give to Telemarketer</description>
        <label>Telemarketer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Needs__c</fullName>
        <label>Travel Needs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Travel</fullName>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>Global Travel</fullName>
                </value>
                <value>
                    <fullName>Group Air</fullName>
                </value>
                <value>
                    <fullName>Meetings &amp; Events</fullName>
                </value>
                <value>
                    <fullName>Spotnana</fullName>
                </value>
                <value>
                    <fullName>Troop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incumbent_OBT__c</fullName>
        <label>Incumbent - OBT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Axiom</fullName>
                </value>
                <value>
                    <fullName>CWT - Horizon</fullName>
                </value>
                <value>
                    <fullName>Deem</fullName>
                </value>
                <value>
                    <fullName>Egencia</fullName>
                </value>
                <value>
                    <fullName>Expedia</fullName>
                </value>
                <value>
                    <fullName>GetThere</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Orbitz</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ResX</fullName>
                </value>
                <value>
                    <fullName>SAP Concur</fullName>
                </value>
                <value>
                    <fullName>SAP Concur - Direct Agreement</fullName>
                </value>
                <value>
                    <fullName>Travellink</fullName>
                </value>
                <value>
                    <fullName>Tripactions</fullName>
                </value>
                <value>
                    <fullName>Trip Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incumbent_TMC__c</fullName>
        <label>Incumbent TMC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>Abacus</fullName>
                </value>
                <value>
                    <fullName>Abbey Travel</fullName>
                </value>
                <value>
                    <fullName>Able Travel</fullName>
                </value>
                <value>
                    <fullName>Accord</fullName>
                </value>
                <value>
                    <fullName>Account will not disclose</fullName>
                </value>
                <value>
                    <fullName>Action Travel</fullName>
                </value>
                <value>
                    <fullName>Adelman Travel</fullName>
                </value>
                <value>
                    <fullName>ADTRAV</fullName>
                </value>
                <value>
                    <fullName>Advanced Travel</fullName>
                </value>
                <value>
                    <fullName>AJA Stanmore</fullName>
                </value>
                <value>
                    <fullName>Alba Travel</fullName>
                </value>
                <value>
                    <fullName>Alexander Travel</fullName>
                </value>
                <value>
                    <fullName>All About Travel</fullName>
                </value>
                <value>
                    <fullName>All Points Travel</fullName>
                </value>
                <value>
                    <fullName>Allstar Travel Group (ATG)</fullName>
                </value>
                <value>
                    <fullName>Altour</fullName>
                </value>
                <value>
                    <fullName>American Express Global Travel</fullName>
                </value>
                <value>
                    <fullName>American Travel Planners</fullName>
                </value>
                <value>
                    <fullName>AMJ Getaways</fullName>
                </value>
                <value>
                    <fullName>AmTrav</fullName>
                </value>
                <value>
                    <fullName>Ancor Travel and Tours</fullName>
                </value>
                <value>
                    <fullName>Anderson Travel</fullName>
                </value>
                <value>
                    <fullName>Angora</fullName>
                </value>
                <value>
                    <fullName>Anthony Travel</fullName>
                </value>
                <value>
                    <fullName>Apollo Travel</fullName>
                </value>
                <value>
                    <fullName>Aquarius</fullName>
                </value>
                <value>
                    <fullName>Aries Travel</fullName>
                </value>
                <value>
                    <fullName>Ascendas</fullName>
                </value>
                <value>
                    <fullName>Associated Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lead_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>lead checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behavior_Score__c</fullName>
        <description>Receives the behavioral portion of the lead score from Marketo.</description>
        <inlineHelpText>Marketing Interest Score based on person&apos;s interaction with marketing activities.</inlineHelpText>
        <label>Behavior Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Note__c</fullName>
        <description>identifies where the page submission and pub downloaded.</description>
        <label>Marketing Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recycle_Reason__c</fullName>
        <description>Indicates why the lead or contact was sent to the Recycled state.</description>
        <inlineHelpText>Pick the reason that best fits the reason for recycling this lead. Recycle will allow the person to be contacted by marketing/sales in the future to re-engage. If the person should never be contacted again, please select &quot;Disqualified&quot; as the Contact Status.</inlineHelpText>
        <label>Recycle Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetName>Recycle_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_LEGACY_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC_LEGACY_ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telemarketer_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Telemarketer 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incumbent_Notes__c</fullName>
        <label>Incumbent Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Source__c</fullName>
        <label>Industry Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_to_Marketo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sync to Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Air_Spend__c</fullName>
        <label>Annual Air Spend</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_History__c</fullName>
        <label>Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_State__c</fullName>
        <label>Enterprise State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>South West</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>South East</fullName>
                </value>
                <value>
                    <fullName>North East</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demographic_Score__c</fullName>
        <description>Receives the demographic portion of the lead score from Marketo.</description>
        <inlineHelpText>Marketing Qualification Score based on Company and Person Demographics.</inlineHelpText>
        <label>Demographic Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diversity_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diversity Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDR_Assigned_Date__c</fullName>
        <label>SDR Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDR_Assigned_Name__c</fullName>
        <label>SDR Assigned Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adam Cacioppo</fullName>
                </value>
                <value>
                    <fullName>Crystie Morgan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Digit_Lead_ID__c</fullName>
        <description>Case safe ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Use this ID in APIs or Exports</inlineHelpText>
        <label>18-Digit Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <inlineHelpText>Please enter the name of the specific source.</inlineHelpText>
        <label>Lead Source Detail</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Spend_Air__c</fullName>
        <label>Prospect Spend - Air</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospect_Spend_Car__c</fullName>
        <label>Prospect Spend - Car</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <label>Unqualified Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATPI or Global</fullName>
                </value>
                <value>
                    <fullName>Competition Loyalty</fullName>
                </value>
                <value>
                    <fullName>Compliance and Regulatory Issues</fullName>
                </value>
                <value>
                    <fullName>Deleted Account – Company No Longer Exists</fullName>
                </value>
                <value>
                    <fullName>DNC – Over/Under Size</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>No Travel Need</fullName>
                </value>
                <value>
                    <fullName>Not Involved in Travel Decision</fullName>
                </value>
                <value>
                    <fullName>Poor Timing</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Under Contract</fullName>
                </value>
                <value>
                    <fullName>Unmanaged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Air_Spend_From_File__c</fullName>
        <label>Air Spend From File</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disqualified_Reason__c</fullName>
        <description>Indicates why a lead or contact was disqualified by SDR or Sales.</description>
        <inlineHelpText>Pick the reason that best represents why you are disqualifying the lead. For those that could be contacted by marketing/sales in the future, please select &quot;Recycle&quot; instead of &quot;Disqualified&quot;.</inlineHelpText>
        <label>Disqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetName>Disqualified_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_Sales_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field has been created to update Sales Region for data upload.</description>
        <label>Update Sales Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_Spend_Hotel__c</fullName>
        <label>Prospect Spend - Hotel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospect_Profile_Year__c</fullName>
        <label>Prospect Profile Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Transactions__c</fullName>
        <label>Prospect - # Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Lead_Source__c</fullName>
        <label>Secondary Lead Source</label>
        <length>118</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incumbent_Expense_Tool__c</fullName>
        <label>Incumbent Expense Tool</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>Certify</fullName>
                </value>
                <value>
                    <fullName>Chrome River</fullName>
                </value>
                <value>
                    <fullName>Concur</fullName>
                </value>
                <value>
                    <fullName>Cost Point</fullName>
                </value>
                <value>
                    <fullName>Coupa</fullName>
                </value>
                <value>
                    <fullName>Deem Expense</fullName>
                </value>
                <value>
                    <fullName>Expense Anywhere</fullName>
                </value>
                <value>
                    <fullName>ExpenseWire</fullName>
                </value>
                <value>
                    <fullName>Expensify</fullName>
                </value>
                <value>
                    <fullName>Gelco</fullName>
                </value>
                <value>
                    <fullName>IBM GERS</fullName>
                </value>
                <value>
                    <fullName>IExpense</fullName>
                </value>
                <value>
                    <fullName>IFS Expense</fullName>
                </value>
                <value>
                    <fullName>Infor</fullName>
                </value>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>Interpix</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>PeopleSoft</fullName>
                </value>
                <value>
                    <fullName>Proprietary</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Telecom</fullName>
                </value>
                <value>
                    <fullName>UniNet</fullName>
                </value>
                <value>
                    <fullName>WellsOne Commercial Card Expense</fullName>
                </value>
                <value>
                    <fullName>Workday</fullName>
                </value>
                <value>
                    <fullName>Zeno Travel &amp; Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Converted_from_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Converted from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Creation_Date__c</fullName>
        <label>Original Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role_Specific_to_Travel__c</fullName>
        <label>Role Specific to Travel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Gatekeeper</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Referrer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <description>Date of contract expiration for existing agency</description>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadStatus2ContactStatus__c</fullName>
        <formula>Text(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadStatus2ContactStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Spend_Air_Comment__c</fullName>
        <label>Prospect Spend - Air Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CASL_consent_email_marketing__c</fullName>
        <description>Compliance with Canadian Anti-Spam Law.</description>
        <inlineHelpText>If box is checked, in compliance with Canadian Anti-Spam Law.</inlineHelpText>
        <label>CASL consent email marketing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Contract_Expiration__c</fullName>
        <label>Prospect Contract Expiration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1 2024</fullName>
                </value>
                <value>
                    <fullName>Q2 2024</fullName>
                </value>
                <value>
                    <fullName>Q3 2024</fullName>
                </value>
                <value>
                    <fullName>Q4 2024</fullName>
                </value>
                <value>
                    <fullName>Q1 2025</fullName>
                </value>
                <value>
                    <fullName>Q2 2025</fullName>
                </value>
                <value>
                    <fullName>Q3 2025</fullName>
                </value>
                <value>
                    <fullName>Q4 2025</fullName>
                </value>
                <value>
                    <fullName>Q1 2026</fullName>
                </value>
                <value>
                    <fullName>Q2 2026</fullName>
                </value>
                <value>
                    <fullName>Q3 2026</fullName>
                </value>
                <value>
                    <fullName>Q4 2026</fullName>
                </value>
                <value>
                    <fullName>Q1 2027</fullName>
                </value>
                <value>
                    <fullName>Q2 2027</fullName>
                </value>
                <value>
                    <fullName>Q3 2027</fullName>
                </value>
                <value>
                    <fullName>Q4 2027</fullName>
                </value>
                <value>
                    <fullName>Q1 2028</fullName>
                </value>
                <value>
                    <fullName>Q2 2028</fullName>
                </value>
                <value>
                    <fullName>Q3 2028</fullName>
                </value>
                <value>
                    <fullName>Q4 2028</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Headquarters_Location__c</fullName>
        <inlineHelpText>Where is the company headquartered?</inlineHelpText>
        <label>Company Headquarters Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deduplication_Archived_Values__c</fullName>
        <description>RingLead Dedup Field This field will serve as an archive of information in the event we need to rebuild merged records There is no reverse button, merged records will need to be rebuilt.</description>
        <label>Deduplication Archived Values</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>